# video-editor

./: DESIGN.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.firecrawl/: awesome-openclaw-skills.json  openclaw-creating-skills.json  openclaw-search.json  openclaw-skills-docs.json
.openclaw/skills/video-silence-trimmer/: SKILL.md
.openclaw/skills/video-silence-trimmer/examples/: quick_demo.py
.openclaw/skills/video-silence-trimmer/rules/: setup.md
tests/: test_segment.py
video_silence_trimmer/: __init__.py  __main__.py  cli.py  config.py
video_silence_trimmer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
video_silence_trimmer/core/: analyzer.py  cutter.py  segment.py  trimmer.py
video_silence_trimmer/utils/: audio_utils.py  ffmpeg_utils.py
